--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.5",
     "vue": "^2.5.2"
   },
   "devDependencies": {
