--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "loadash": "^1.0.0",
     "lodash": "^4.17.5",
+    "semantic-ui-css": "^2.3.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
