--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "semantic-ui-css": "^2.3.1",
     "vue": "^2.5.2"
